Add products and collection sections html, js and css styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -298,14 +298,100 @@ img {
 .new__link:hover i{
   transform: translateX(.25rem);
 }
+
 /*=============== COLLECTION ===============*/
+.collection{
+  background-color: var(--bg-color-light);
+  overflow: hidden;
+}
+
+.collection__container{
+  position: relative;
+  height: 571px;
+  display: grid;
+  justify-items: center;
+}
+
+.collection__title{
+  font-size: var(--h1-font-size);
+  margin-bottom: .71rem;
+}
+
+.collection__explore{
+  display: grid;
+  column-gap: 2rem;
+  position: absolute;
+}
+
+.collection__explore:nth-child(2){
+  grid-template-columns: 230px max-content;
+  bottom: 1rem;
+  margin-right: 5rem;
+}
+
+.collection__explore:nth-child(1){
+  grid-template-columns: max-content 230px;
+  top: 0;
+  margin-left: 5rem;
+}
+
+.collection__data-men{
+  margin-top: 2.5rem;
+}
+
+.collection__data-women{
+  align-self: flex-end;
+  margin-bottom: 2.5rem;
+}
 
 
 /*=============== PRODUCTS ===============*/
+.products__container{
+  padding-bottom: 5rem;
+}
+
+.products__card{
+  width: 270px;
+}
+
+.products__img{
+  margin-bottom: 1rem;
+}
+
+.products__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: .75rem;
+}
+
+.products__price{
+  color: var(--title-color);
+  font-weight: var(--font-medium);
+}
 
 
 /* Swiper class */
+.swiper-button-prev::after,
+.swiper-button-next::after{
+  content: '';
+}
 
+.swiper-button-prev,
+.swiper-button-next{
+  top: initial;
+  bottom: 0;
+  width: initial;
+  height: initial;
+  font-size: 1.5rem;
+  color: var(--title-color);
+}
+
+.swiper-button-prev{
+  left: calc(50% - 2rem);
+}
+
+.swiper-button-next{
+  right: calc(50% - 2rem);
+}
 
 /*=============== BRANDS ===============*/
 
