--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,9 +88,22 @@ img {
 
 /*=============== THEME ===============*/
 /*========== Variables Dark theme ==========*/
+body.dark-theme{
+  --bg-color: hsl(220, 18%, 13%);
+  --bg-color-light: hsl(220, 18%, 23%);
+  --title-color: hsl(220, 8%, 95%);
+  --text-color: hsl(220, 8%, 65%);
+  --body-color: hsl(220, 18%, 18%);
+  --container-color: hsl(220, 18%, 21%);
+}
 
 
 /*========== Button Dark/Light ==========*/
+.change-theme{
+  color: var(--title-color);
+  font-size: 1.125rem;
+  cursor: pointer;
+}
 
 
 /*==========
@@ -190,6 +203,9 @@ img {
 
 
 /* Active link */
+.active-link{
+  color: var(--title-color);
+}
 
 
 /*=============== HOME ===============*/
@@ -491,12 +507,46 @@ img {
 
 
 /*=============== SCROLL BAR ===============*/
+::-webkit-scrollbar{
+  width: .6rem;
+  border-radius: .5rem;
+  background-color: hsl(220, 8%, 76%);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: hsl(220, 18%, 64%);
+  border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: hsl(220, 18%, 54%);
+}
 
 
 /*=============== SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -30%;
+  background-color: var(--container-color);
+  box-shadow: 0 8px 12px hsl(220, 18%, 45%, .15);
+  display: inline-flex;
+  padding: .35rem;
+  color: var(--title-color);
+  font-size: 1.1rem;
+  z-index: var(--z-tooltip);
+  transition: 0.3s;
+}
+
+.scrollup:hover{
+  transform: translateY(-.25rem);
+}
 
 
 /* Show Scroll Up*/
+.show-scroll{
+  bottom: 7.5rem ;
+}
 
 
 /*=============== BREAKPOINTS ===============*/
