--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,6 +110,30 @@ body.dark-theme{
     Color changes in some parts of
     the website, in dark theme
 ==========*/
+.dark-theme .scroll-header{
+  box-shadow: 0 2px 8px hsla(220, 18%, 8%, .3);
+}
+
+.dark-theme .nav__menu{
+  background-color: var(--container-color);
+}
+
+.dark-theme .nav__menu,
+.dark-theme .scrollup{
+  box-shadow: 0 4px 8px hsla(220, 18%, 8%, .3);
+}
+
+.dark-theme::-webkit-scrollbar{
+  background-color: hsl(220, 18%, 15%);
+}
+
+  .dark-theme::-webkit-scrollbar-thum{
+  background-color: hsl(220, 18%, 25%);
+  }
+
+  .dark-theme::-webkit-scrollbar{
+  background-color: hsl(220, 18%, 35%);
+}
 
 
 /*=============== REUSABLE CSS CLASSES ===============*/
@@ -173,6 +197,7 @@ body.dark-theme{
     margin: 0 auto;
     padding: 1.25rem 2.8rem;
     border-radius: .5rem;
+    transition: .4s; /*For animation dark mode*/
   }
   .nav__list{
     display: flex;
@@ -212,6 +237,7 @@ body.dark-theme{
 .home{
   background-color: var(--bg-color);
   overflow: hidden;
+  transition: .4s; /*For animation dark mode*/
 }
 
 .home__container{
@@ -319,6 +345,7 @@ body.dark-theme{
 .collection{
   background-color: var(--bg-color-light);
   overflow: hidden;
+  transition: .4s; /*For animation dark mode*/
 }
 
 .collection__container{
